--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>nuevo </h1>
+    <div id="app">
+    </div>
+    <script src="bundle.js"></script>
 </body>
 </html>
